# bet-advisor

./: .env.example  .gitignore  README.md  RESEARCH.md  pyproject.toml
.github/workflows/: ci.yml
config/: venues.json
docs/: evaluation.md  models.md  operations.md
research/: 01_afl_modelling.md  02_afl_data_sources.md  03_odds_ingestion.md  04_ev_staking_evaluation.md  05_architecture.md  06_betfair_alternatives.md
scripts/: backfill.py  run_backtest.py
src/bet_advisor/: main.py  scheduler.py
src/bet_advisor/backtest/: walk_forward.py
src/bet_advisor/eval/: calibration.py  clv.py  clv_reference.py  devig.py  ev.py  kelly.py
src/bet_advisor/ingest/: afl_tables.py  betfair.py  footywire.py  news.py  odds_api.py  squiggle.py  weather.py
src/bet_advisor/models/: disposals.py  h2h_elo.py  totals.py
src/bet_advisor/notify/: __init__.py  cli_report.py
src/bet_advisor/recommend/: __init__.py  engine.py  model_health.py  pnl.py
src/bet_advisor/storage/: duckdb_store.py  parquet_archive.py  sqlite_store.py
tests/: test_backfill.py  test_backtest_walk_forward.py  test_eval_calibration.py  test_eval_clv.py  test_eval_clv_reference.py  test_eval_devig.py  test_eval_ev.py  test_eval_kelly.py  test_ingest_betfair.py  test_ingest_odds_api.py  test_ingest_squiggle.py  test_ingest_weather.py  test_main_cli.py  test_models_disposals.py  test_notify_cli_report.py  test_recommend_engine.py  test_recommend_model_health.py  test_recommend_pnl.py  test_run_backtest_script.py  test_scheduler.py  test_storage_duckdb.py  test_storage_parquet.py  test_storage_sqlite.py
