[project]
name = "bet-advisor"
version = "0.0.1"
description = "Stats-driven AFL betting advisor. Private use."
requires-python = ">=3.12"
dependencies = [
  "requests>=2.32",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "apscheduler>=3.10",
  "duckdb>=1.1",
  "pandas>=2.2",
  "pyarrow>=17",
  "numpy>=2.0",
  "scikit-learn>=1.5",
  "scipy>=1.13",
  "statsmodels>=0.14",
  "shin>=1.0",
  "pyAFL>=0.3",
  "betfairlightweight>=2.20",
  "beautifulsoup4>=4.12",
  "lxml>=5.2",
  "tenacity>=9.0",
  "pydantic>=2.8",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
  "ipykernel>=6.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bet_advisor"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
