[project]
name = "bet-advisor"
version = "0.0.1"
description = "Stats-driven AFL betting advisor. Private use."
requires-python = ">=3.12"
dependencies = [
  "requests>=2.32",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "apscheduler>=3.10",
  "duckdb>=1.1",
  "pandas>=2.2",
  "pyarrow>=17",
  "numpy>=2.0",
  "scikit-learn>=1.5",
  "scipy>=1.13",
  "statsmodels>=0.14",
  # shin dropped Python 3.14+ support; install with --no-deps or use a fork
  # "shin>=1.0",  # deferred until upstream adds 3.14 support
  # pyAFL has no 3.14 wheel; install from source if needed
  # "pyAFL>=0.3",  # deferred -- afl_tables.py has a scraper fallback
  "betfairlightweight>=2.20",
  "beautifulsoup4>=4.12",
  "lxml>=5.2",
  "tenacity>=9.0",
  "pydantic>=2.8",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
  "ipykernel>=6.29",
  "responses>=0.25",
]

[project.scripts]
bet-advisor = "bet_advisor.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bet_advisor"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
no_strict_optional = true
warn_unused_ignores = false

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "S608", "S101"]
